# grabdiscount-bot

./: .env.example  .gitignore  CLAUDE.md  GUIDE.html  GUIDE.md  Makefile  Optimisation_Livraison.xlsx  accounts.json  bot.py  build.md  cuisines.json  dashboard.py  icloud_imap.py  install_raspberry.sh  install_vps.sh  monitoring.py  pyproject.toml  render.yaml  requirements.txt  restaurant_scraper.py  restaurants.json  run_dashboard_v2.py  run_one.py  scraper.py  security.md  self-improving-agent.md  start.py  subscribers.py
app/: __init__.py
app/bot/: __init__.py
app/core/: __init__.py  config.py  exceptions.py  logging.py
app/dashboard/: __init__.py  app.py  security.py  stores.py
app/dashboard/api/: __init__.py  accounts.py  admin.py  auth.py  health.py  messages.py  orders.py  restaurants.py
app/integrations/: __init__.py  sentry.py
app/storage/: __init__.py  accounts.py  base.py  messages.py  models.py  orders.py  paths.py  restaurants.py  status.py  subscribers.py  zones.py
grab/icloud_gen/chrome_selenium_profile/: ChromeFeatureState  DevToolsActivePort  Local State  SingletonCookie  SingletonLock  SingletonSocket
grab/icloud_gen/chrome_selenium_profile/Default/: AccessibilityAnnotatorDatabase-wal  BrowsingTopicsState  Cookies  DIPS-wal  Favicons  History  History-journal  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Secure Preferences  TransportSecurity  (+1 more)
grab_gen/: appium_setup.sh  calibrate.py  dump_screen.py  fake_fr.py  grab_app.py  grab_order.py  grab_reg.py  onoff.py  orchestrator.py  pipeline.py  test_full_phone.py  test_signup_flow.py
icloud_gen/: LICENSE  README.md  auto_cookie_from_chrome.py  auto_generate.sh  auto_renew_cookie.sh  chromeonly.py  cli.py  cookie.txt  emails.txt  extract_cookies.py  generate_emails.py  grab_cookie_from_chrome.py  main.py  post_process_emails.py  requirements.txt  run.py  sync_accounts_to_vps.py
icloud_gen/chrome_selenium_profile/: ChromeFeatureState  Local State
icloud_gen/chrome_selenium_profile/Default/: Affiliation Database  BrowsingTopicsState  Cookies  DIPS  Favicons  History  Login Data  MediaDeviceSalts  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Secure Preferences  Shortcuts  Top Sites  TransportSecurity  Web Data  passkey_enclave_state
icloud_gen/chrome_selenium_profile/GraphiteDawnCache/: data_0  data_1  data_2  index
icloud_gen/chrome_selenium_profile/component_crx_cache/: metadata.json
icloud_gen/chrome_selenium_profile/segmentation_platform/: ukm_db
icloud_gen/icloud/: __init__.py  hidemyemail.py
identity_gen/: __init__.py  australia_addresses.py  bangkok_addresses.py  france_addresses.py  identities.py
lib/: bangkok_address.py  french_identity.py  icloud_hme.py  sms_otp.py
ops/: DEPLOY_V2.md  OPERATIONS.md
ops/nginx/: grabdiscount.conf
ops/systemd/: grabdiscount-v2.service
scripts/: migrate_dual_zone.py  setup_2fa.py
sms_gen/: __init__.py  fivesim.py  herosms.py  smsactivate.py  smspool.py
tasks/: checklist_signup_grab.md  lessons.md  plan_usine_grab.md
tests/: conftest.py  test_accounts_store.py  test_api_accounts.py  test_api_admin.py  test_api_auth.py  test_api_messages.py  test_api_orders.py  test_api_restaurants.py  test_config.py  test_dashboard_app.py  test_dashboard_security.py  test_exceptions.py  test_jsonstore.py  test_logging.py  test_messages_store.py  test_orders_store.py  test_restaurants_store.py  test_sentry.py  test_smoke.py  test_status_store.py  test_storage_paths.py  test_subscribers_store.py
webapp/: index.html
(+75 files in other folders)
